practice/vpc.tf
resource "aws_vpc" "smm_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "SMM-VPC"
  }
}
